--- a/views/user.html
+++ b/views/user.html
@@ -2,7 +2,7 @@
 
 <div> {{ error }}</div>
 
-<div ng-hide="user">
+<div ng-hide="user || error">
     <img src="content/images/loading.gif" title="Loading..."/>
 </div>
 
